# Dama

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MakeDamaGreatAgain  MakeDamaGreatAgain.cbp  Makefile  cmake_install.cmake  gitignore  main.cpp
.cmake/api/v1/reply/: cache-v2-4f5282b934148782820d.json  cmakeFiles-v1-01e4739dae91a53664c9.json  codemodel-v2-dc9a0058222f89f0d89e.json  index-2021-12-04T16-05-05-0828.json  target-MakeDamaGreatAgain-Debug-9c309fa94c9d1359bad9.json
Command/: Command.h
apium/a_piece/: a_piece.h
apium/apium/: apium.cpp  apium.h
apium/apiumline/: apiumline.cpp  apiumline.h
apium/playstyle/: playstyle.h
apium/scoredmove/: scoredMove.cpp  scoredMove.h
board/: board.cpp  board.h
boardPos/: boardPos.cpp  boardPos.h
color/: color.cpp  color.h
colorMatrix/: colorMatrix.cpp  colorMatrix.h
command/: command.cpp  command.h
commandHandler/: commandHandler.cpp  commandHandler.h
constants/: board_assets.h  colors_codes.h  directions.h  number_constants.h
coords/: coords.cpp  coords.h
engine/: engine.cpp  engine.h
enums/: BoardStyles.h  ColumnNoatiton.h  ColumnNotatiton.h  ErrorType.h  GameState.h  GameStyle.h  MoveData.h  MoveIssue.h  MoveReturn.h  MoveType.h  Piece.h  PieceType.h  PlayerColor.h  SquareColor.h  UiReturn.h  cliCases.h  fileIssue.h  playstyle.h
fileHandler/: fileHandler.cpp  fileHandler.h
gamehandler/: gamehandler.cpp  gamehandler.h
helpPages/: helpPages.cpp  helpPages.h
helpers/: helpers.cpp  helpers.h
move/: move.cpp  move.h
movecase/: movecase.cpp  movecase.h
piece/: Piece.cpp  Piece.h
player/: player.cpp  player.h
render/: render.cpp  render.h
renders/: render.cpp  render.h
rendersquare/: rendersquare.cpp  rendersquare.h
square/: square.cpp  square.h
ui/: ui.cpp  ui.h
